# movai-core-shared

./: .bumpversion.cfg  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CNAME  README.md  build-requirements.txt  pyproject.toml  requirements.txt  setup.py  tox.ini  versions.json
.github/workflows/: DeployOnGitRelease.yml  DeployOnMergeMain.yml  TestOnPR.yml
3.0/: .buildinfo  genindex.html  index.html  modules.html  movai_core_shared.common.html  movai_core_shared.core.html  movai_core_shared.core.zmq.html  movai_core_shared.html  movai_core_shared.messages.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
3.0/.doctrees/: environment.pickle  movai_core_shared.common.doctree  movai_core_shared.core.doctree  movai_core_shared.doctree
3.0/_sources/: modules.rst.txt
docs/source/: conf.py  index.rst
main/: .buildinfo  changelog.html  genindex.html  index.html  logging.html  modules.html  movai_core_shared.common.html  movai_core_shared.core.html  movai_core_shared.core.zmq.html  movai_core_shared.html  movai_core_shared.messages.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
main/.doctrees/: changelog.doctree  environment.pickle  index.doctree  readme.doctree  (+7 more)
movai_core_shared/: __init__.py  alert.py  base_query.py  consts.py  envvars.py  exceptions.py  log_query.py  logger.py  message_client.py  recovery.py
tests/: dummy_zmq_server.py  logs_test.py  test_logger.py  test_logging.py  test_messages_datas.py  test_msg_zmq.py  test_secure_password.py  test_zmq_client.py  test_zmq_server.py  tests_utils.py
(+44 files in other folders)
