[build-system]
requires = [
    "setuptools>=61",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "movai-core-shared"
version = "3.0.1.0"
authors = [
    {name = "Backend team", email = "backend@mov.ai"},
]
description = "Shared objects for various MOV.AI projects."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "beartype==0.14.1",
    "cryptography==2.8",
    "requests==2.31.0",
    "pyzmq==26.0.0",
    "pydantic[email]==2.5.2",
]

[project.urls]
Repository = "https://github.com/MOV-AI/movai-core-shared"

[tool.setuptools.packages.find]
include = ["movai_core_shared*"]
exclude = ["movai_core_shared.tests*"]

[tool.black]
line-length = 100

[tool.bumpversion]
current_version = "3.0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)?(\\.(?P<build>\\d+))?"
serialize = ["{major}.{minor}.{patch}.{build}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
regex = true

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = '# vTBD'
serialize = ["{major}.{minor}.{patch}"]
replace = "# v{new_version}"
regex = true
ignore_missing_version = true
